# dumb-voice-protocol

./: .gitignore  Cargo.toml  README.md  build.ps1  build.rs  dmvop.sln  dmvop.toml  help.txt  run-manager.ps1
binding/unity/: DMVOPListener.cs
binding/unreal/: .gitignore  build-plugin.ps1
binding/unreal/DMVOPBridge/: DMVOPBridge.uplugin
binding/unreal/DMVOPBridge/Source/DMVOPBridge/: DMVOPBridge.Build.cs  DMVOPBridge.cpp  DMVOPBridge.h  DMVOPBridgeClient.cpp  DMVOPBridgeClient.h
manager/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MessageBox.axaml  MessageBox.axaml.cs  ProcessWindow.axaml  ProcessWindow.axaml.cs  Program.cs  app.manifest  manager.csproj
src/: args.rs  device_selector.rs  main.rs  output_protocol.rs  post_proc.rs
src/output_protocol/: ipc.rs  stderr.rs  stdout.rs  tcp.rs  udp.rs  udp_broadcast.rs
src/post_proc/: pinyin.rs  trait.rs
