[package]
name = "dumb-voice-protocol"
version = "0.1.0"
edition = "2024"
description = "A CLI program that reads your microphone device and outputs information to stdout/IPC."

[[bin]]
name = "dmvop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["net", "rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.vtx-engine]
git = "https://github.com/Weicao-CatilGrass/vtx-engine"
rev = "864889b97c52d31098670d33e10d62a96ec8c41e"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
panic = "abort"
incremental = false
codegen-units = 1
lto = "fat"
