[package]
name = "dumb-voice-protocol"
version = "0.1.0"
edition = "2024"
description = "A CLI program that reads your microphone device and outputs information to stdout/IPC."

[[bin]]
name = "dmvop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["net", "rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pinyin = { version = "0.11.0", features = ["with_tone", "with_tone_num", "with_tone_num_end"] }

[dependencies.vtx-engine]
git = "https://github.com/Weicao-CatilGrass/vtx-engine"
rev = "35b954ad50ec6211e6a25ca4777d1685311f696e"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
panic = "abort"
incremental = false
codegen-units = 1
lto = "fat"
